# src/Modules/Auth/Routes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { register, login, sendOTP, checkOTP, resetPassword, confirmResetPassword } from './Auth.Controller.js';
+import { register, login, sendOTP, checkOTP, resetPassword, confirmResetPassword, verify_token } from './Auth.Controller.js';
 
 const router = express.Router();
 
@@ -9,5 +9,6 @@ router.post('/send-otp', sendOTP);
 router.post('/check-otp', checkOTP);
 router.post('/reset-password', resetPassword);
 router.post('/confirm-reset-password', confirmResetPassword); // Add the confirm reset password route
+router.post('/verify-token', verify_token); // Add the confirm reset password route
 
 export default router;
