# src/Modules/Auth/swagger.yaml
@@ -1,19 +1,15 @@
 openapi: 3.0.0
 info:
-  title: Social API
-  description: API documentation for the Social project
+  title: Social Media API
+  description: API documentation for the Social Media project
   version: 1.0.0
-
 servers:
-  - url: http://localhost:5000
-    description: Local server
-
+  - url: http://localhost:3000/api
 tags:
   - name: auth
     description: Authentication related endpoints
 
 paths:
-
   /auth/register:
     post:
       tags:
@@ -32,13 +28,6 @@ paths:
                   type: string
                 password:
                   type: string
-                repeat_password:
-                  type: string
-              required:
-                - name
-                - email
-                - password
-                - repeat_password
       responses:
         '201':
           description: User registered successfully
@@ -51,6 +40,8 @@ paths:
                     $ref: '#/components/schemas/User'
                   message:
                     type: string
+                  success:
+                    type: boolean
         '409':
           description: User already exists
         '400':
@@ -72,9 +63,6 @@ paths:
                   type: string
                 password:
                   type: string
-              required:
-                - email
-                - password
       responses:
         '200':
           description: Login successful
@@ -83,10 +71,14 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
                   message:
                     type: string
                   token:
                     type: string
+                  user:
+                    $ref: '#/components/schemas/User'
         '404':
           description: User not found
         '403':
@@ -108,8 +100,6 @@ paths:
               properties:
                 email:
                   type: string
-              required:
-                - email
       responses:
         '200':
           description: OTP sent successfully
@@ -118,6 +108,8 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
                   message:
                     type: string
         '404':
@@ -139,8 +131,6 @@ paths:
               properties:
                 otp:
                   type: string
-              required:
-                - otp
       responses:
         '200':
           description: User is now active
@@ -149,6 +139,8 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
                   message:
                     type: string
         '404':
@@ -162,7 +154,7 @@ paths:
     post:
       tags:
         - auth
-      summary: Reset password and send new password to user's email
+      summary: Request password reset
       requestBody:
         required: true
         content:
@@ -172,8 +164,6 @@ paths:
               properties:
                 email:
                   type: string
-              required:
-                - email
       responses:
         '200':
           description: Password reset token sent successfully
@@ -182,12 +172,14 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
                   message:
                     type: string
         '404':
           description: User not found
         '403':
-          description: A password reset token has already been sent to your email
+          description: Password reset token already sent
         '400':
           description: Validation error
 
@@ -209,10 +201,6 @@ paths:
                   type: string
                 newPassword:
                   type: string
-              required:
-                - email
-                - token
-                - newPassword
       responses:
         '200':
           description: Password reset successfully
@@ -221,6 +209,8 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
                   message:
                     type: string
         '404':
@@ -230,20 +220,56 @@ paths:
         '400':
           description: Validation error
 
+  /auth/verify-token:
+    post:
+      tags:
+        - auth
+      summary: Verify JWT token
+      responses:
+        '200':
+          description: Token is valid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  user:
+                    $ref: '#/components/schemas/User'
+                  success:
+                    type: boolean
+        '403':
+          description: Token expired
+        '401':
+          description: Invalid token
+
 components:
   schemas:
     User:
       type: object
       properties:
-        id:
-          type: integer
         name:
           type: string
+        title:
+          type: string
+        bio:
+          type: string
+        post_count:
+          type: integer
         email:
           type: string
-        created_at:
+        slug:
           type: string
-          format: date-time
-        updated_at:
+        img:
           type: string
-          format: date-time
+        follower_count:
+          type: integer
+        following_count:
+          type: integer
+        task_done:
+          type: integer
+        project_done:
+          type: integer
+        img_bg:
+          type: string
