# src/Modules/Auth/validation.js
@@ -4,7 +4,7 @@ const registerSchema = yup.object().shape({
     name: yup.string().required(),
     email: yup.string().email().required(),
     password: yup.string().required(),
-    repeat_password: yup.string().oneOf([yup.ref('password'), null], 'Passwords must match').required()
+    password_confirmation: yup.string().oneOf([yup.ref('password'), null], 'Passwords must match').required()
 });
 
 const loginSchema = yup.object().shape({
